{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 42,
  "lineage": "2e28fc4f-7f2f-fa9a-396b-ef3d71fffcf8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "prefect2_controller",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0557a15b87f6559cf",
            "arn": "arn:aws:ec2:us-east-1:461557490742:instance/i-082e96dba1961bb0e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-082e96dba1961bb0e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "wa-ops",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-009e1fbca42f2b5a5",
            "private_dns": "ip-172-16-10-98.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.10.98",
            "public_ip": "44.215.110.69",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:461557490742:key/07f3bd97-21f1-4b1c-911b-06ec4eb995d5",
                "throughput": 0,
                "volume_id": "vol-0af2b8cc0e0957a4a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0687b3d564cba80ec",
            "tags": {
              "Name": "prefect2-ec2-0",
              "Project": "prefect2",
              "Status": "proof-of-concept",
              "Team": "engineering"
            },
            "tags_all": {
              "Name": "prefect2-ec2-0",
              "Project": "prefect2",
              "Status": "proof-of-concept",
              "Team": "engineering"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02e21ffb767a6046c"
            ]
          },
          "dependencies": [
            "aws_security_group.prefect2_sg",
            "aws_subnet.prefect2_public_subnet",
            "aws_vpc.prefect2_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0557a15b87f6559cf",
            "arn": "arn:aws:ec2:us-east-1:461557490742:instance/i-0dfd919d10f2158bf",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dfd919d10f2158bf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "wa-ops",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0080da9139ece5018",
            "private_dns": "ip-172-16-10-93.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.10.93",
            "public_ip": "3.235.161.21",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:461557490742:key/07f3bd97-21f1-4b1c-911b-06ec4eb995d5",
                "throughput": 0,
                "volume_id": "vol-09ae6feef67e27639",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0687b3d564cba80ec",
            "tags": {
              "Name": "prefect2-ec2-1",
              "Project": "prefect2",
              "Status": "proof-of-concept",
              "Team": "engineering"
            },
            "tags_all": {
              "Name": "prefect2-ec2-1",
              "Project": "prefect2",
              "Status": "proof-of-concept",
              "Team": "engineering"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02e21ffb767a6046c"
            ]
          },
          "dependencies": [
            "aws_security_group.prefect2_sg",
            "aws_subnet.prefect2_public_subnet",
            "aws_vpc.prefect2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "prefect2_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461557490742:internet-gateway/igw-04384115efdf4147f",
            "id": "igw-04384115efdf4147f",
            "owner_id": "461557490742",
            "tags": {
              "Name": "prefect2-igw",
              "Project": "prefect2",
              "Status": "proof-of-concept",
              "Team": "engineering"
            },
            "tags_all": {
              "Name": "prefect2-igw",
              "Project": "prefect2",
              "Status": "proof-of-concept",
              "Team": "engineering"
            },
            "vpc_id": "vpc-05812a36e342bfa9a"
          },
          "dependencies": [
            "aws_vpc.prefect2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prefect2_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461557490742:route-table/rtb-0cb9a1b1613102903",
            "id": "rtb-0cb9a1b1613102903",
            "owner_id": "461557490742",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04384115efdf4147f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prefect2-route-table",
              "Project": "prefect2",
              "Status": "proof-of-concept",
              "Team": "engineering"
            },
            "tags_all": {
              "Name": "prefect2-route-table",
              "Project": "prefect2",
              "Status": "proof-of-concept",
              "Team": "engineering"
            },
            "timeouts": null,
            "vpc_id": "vpc-05812a36e342bfa9a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.prefect2_igw",
            "aws_vpc.prefect2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prefect2_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04a8d88b514448c13",
            "route_table_id": "rtb-0cb9a1b1613102903",
            "subnet_id": "subnet-0687b3d564cba80ec"
          },
          "dependencies": [
            "aws_internet_gateway.prefect2_igw",
            "aws_route_table.prefect2_route_table",
            "aws_subnet.prefect2_public_subnet",
            "aws_vpc.prefect2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "prefect2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461557490742:security-group/sg-02e21ffb767a6046c",
            "description": "prefect2 security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02e21ffb767a6046c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "prefect2_sg",
            "name_prefix": "",
            "owner_id": "461557490742",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prefect2-sg",
              "Project": "prefect2",
              "Status": "proof-of-concept",
              "Team": "engineering"
            },
            "tags_all": {
              "Name": "prefect2-sg",
              "Project": "prefect2",
              "Status": "proof-of-concept",
              "Team": "engineering"
            },
            "timeouts": null,
            "vpc_id": "vpc-05812a36e342bfa9a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prefect2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prefect2_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461557490742:subnet/subnet-06f33a8ff9e070be1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.10.0/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06f33a8ff9e070be1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "461557490742",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prefect2-private-subnet",
              "Project": "prefect2",
              "Status": "proof-of-concept",
              "Team": "engineering"
            },
            "tags_all": {
              "Name": "prefect2-private-subnet",
              "Project": "prefect2",
              "Status": "proof-of-concept",
              "Team": "engineering"
            },
            "vpc_id": "vpc-05812a36e342bfa9a"
          },
          "dependencies": [
            "aws_vpc.prefect2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prefect2_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461557490742:subnet/subnet-0687b3d564cba80ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.10.64/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0687b3d564cba80ec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "461557490742",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prefect2-public-subnet",
              "Project": "prefect2",
              "Status": "proof-of-concept",
              "Team": "engineering"
            },
            "tags_all": {
              "Name": "prefect2-public-subnet",
              "Project": "prefect2",
              "Status": "proof-of-concept",
              "Team": "engineering"
            },
            "vpc_id": "vpc-05812a36e342bfa9a"
          },
          "dependencies": [
            "aws_vpc.prefect2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prefect2_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461557490742:vpc/vpc-05812a36e342bfa9a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0130c313c86063aea",
            "default_route_table_id": "rtb-09581e5321dcc5073",
            "default_security_group_id": "sg-0fbf77aebda2c8d96",
            "dhcp_options_id": "dopt-9b0a51e0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05812a36e342bfa9a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09581e5321dcc5073",
            "owner_id": "461557490742",
            "tags": {
              "Name": "prefect2-vpc",
              "Project": "prefect2",
              "Status": "proof-of-concept",
              "Team": "engineering"
            },
            "tags_all": {
              "Name": "prefect2-vpc",
              "Project": "prefect2",
              "Status": "proof-of-concept",
              "Team": "engineering"
            }
          }
        }
      ]
    }
  ]
}